Bug 1108248: Swap CreateTimerQueueTimer() for timerSetEvent() in webrtc win32 code r=dmajor Avoids limits on the number of realtime (timerSetEvent()) timers