media/webrtc/trunk/webrtc/video_engine/vie_encoder.cc
@@ -130,8 +130,9 @@ class ViECPULoadStateObserver : public CPULoadStateObserver {
       : owner_(owner) {
   }
   virtual ~ViECPULoadStateObserver() {};
-    // Implements CPULoadStateObserver.
-    virtual void onLoadStateChanged(CPULoadState state) {
+
+  // Implements CPULoadStateObserver.
+  virtual void onLoadStateChanged(CPULoadState state) {
     owner_->onLoadStateChanged(state);
   }
  private:
